crates/test-files/fixtures/compile_errors/call_trait_assoc_fn_on_invisible_type/src/main.fe
use foo::DoThing

contract Example {
  pub fn run_test(self) {
    foo::Bar::do()
  }
}
